--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,7 @@ pygments>=2.2
 psutil
 panopticapi @ https://github.com/cocodataset/panopticapi/archive/master.zip
 git+https://github.com/facebookresearch/fvcore.git
+# llama2-wrapper
+# --use-pep517
+transformers
+accelerate
